# navilos

./: CMakeLists.txt  Makefile  README.md  navilos.ld
CMake/: toolchain.cmake
backup/: Interrupt.h
boot/: Entry.S  Main.c
hal/: HalInterrupt.h  HalUart.h
hal/rvpb/: Interrupt.c  Regs.c  Uart.c  Uart.h
include/: ARMv7AR.h  MemoryMap.h  memio.h  type.h
lib/: armcpu.c  armcpu.h  stdarg.h  stdio.c  stdio.h
